[gd_scene load_steps=5 format=3 uid="uid://ceehn6gyw3dlr"]

[ext_resource type="PackedScene" uid="uid://wk22jmqhdn2r" path="res://Scene/UserInterface/bank_display.tscn" id="1_0klwg"]
[ext_resource type="Script" path="res://Scene/UserInterface/game_state.gd" id="1_6vowj"]
[ext_resource type="PackedScene" uid="uid://by0wc0a4eykq2" path="res://Scene/UserInterface/fighter_display.tscn" id="1_m025q"]
[ext_resource type="PackedScene" uid="uid://cd0vpagvoq5rm" path="res://Scene/field_info.tscn" id="1_n4eof"]

[node name="GameState" type="Control"]
custom_minimum_size = Vector2(500, 388)
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 388.0
script = ExtResource("1_6vowj")

[node name="Border" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 460.0
offset_bottom = 538.0

[node name="Mon-Field Split" type="HBoxContainer" parent="Border"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Border/Mon-Field Split"]
layout_mode = 2

[node name="UpperBank" type="HBoxContainer" parent="Border/Mon-Field Split/VBoxContainer"]
layout_mode = 2

[node name="BankDisplay" parent="Border/Mon-Field Split/VBoxContainer/UpperBank" instance=ExtResource("1_0klwg")]
layout_mode = 2

[node name="BankDisplay2" parent="Border/Mon-Field Split/VBoxContainer/UpperBank" instance=ExtResource("1_0klwg")]
layout_mode = 2

[node name="BankDisplay3" parent="Border/Mon-Field Split/VBoxContainer/UpperBank" instance=ExtResource("1_0klwg")]
layout_mode = 2

[node name="BankDisplay4" parent="Border/Mon-Field Split/VBoxContainer/UpperBank" instance=ExtResource("1_0klwg")]
layout_mode = 2

[node name="BankDisplay5" parent="Border/Mon-Field Split/VBoxContainer/UpperBank" instance=ExtResource("1_0klwg")]
layout_mode = 2

[node name="BankDisplay6" parent="Border/Mon-Field Split/VBoxContainer/UpperBank" instance=ExtResource("1_0klwg")]
layout_mode = 2

[node name="MonGrid" type="GridContainer" parent="Border/Mon-Field Split/VBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="FighterDisplay" parent="Border/Mon-Field Split/VBoxContainer/MonGrid" instance=ExtResource("1_m025q")]
layout_mode = 2

[node name="FighterDisplay2" parent="Border/Mon-Field Split/VBoxContainer/MonGrid" instance=ExtResource("1_m025q")]
layout_mode = 2

[node name="FighterDisplay3" parent="Border/Mon-Field Split/VBoxContainer/MonGrid" instance=ExtResource("1_m025q")]
layout_mode = 2

[node name="FighterDisplay4" parent="Border/Mon-Field Split/VBoxContainer/MonGrid" instance=ExtResource("1_m025q")]
layout_mode = 2

[node name="LowerBank" type="HBoxContainer" parent="Border/Mon-Field Split/VBoxContainer"]
layout_mode = 2

[node name="BankDisplay" parent="Border/Mon-Field Split/VBoxContainer/LowerBank" instance=ExtResource("1_0klwg")]
layout_mode = 2

[node name="BankDisplay2" parent="Border/Mon-Field Split/VBoxContainer/LowerBank" instance=ExtResource("1_0klwg")]
layout_mode = 2

[node name="BankDisplay3" parent="Border/Mon-Field Split/VBoxContainer/LowerBank" instance=ExtResource("1_0klwg")]
layout_mode = 2

[node name="BankDisplay4" parent="Border/Mon-Field Split/VBoxContainer/LowerBank" instance=ExtResource("1_0klwg")]
layout_mode = 2

[node name="BankDisplay5" parent="Border/Mon-Field Split/VBoxContainer/LowerBank" instance=ExtResource("1_0klwg")]
layout_mode = 2

[node name="BankDisplay6" parent="Border/Mon-Field Split/VBoxContainer/LowerBank" instance=ExtResource("1_0klwg")]
layout_mode = 2

[node name="FieldEffects" type="VBoxContainer" parent="Border/Mon-Field Split"]
layout_mode = 2

[node name="PanelContainer" type="VBoxContainer" parent="Border/Mon-Field Split/FieldEffects"]
layout_mode = 2

[node name="FieldInfo" parent="Border/Mon-Field Split/FieldEffects/PanelContainer" instance=ExtResource("1_n4eof")]
layout_mode = 2

[node name="FieldInfo2" parent="Border/Mon-Field Split/FieldEffects/PanelContainer" instance=ExtResource("1_n4eof")]
layout_mode = 2

[node name="Buffer" type="Control" parent="Border/Mon-Field Split/FieldEffects"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer2" type="VBoxContainer" parent="Border/Mon-Field Split/FieldEffects"]
layout_mode = 2

[node name="FieldInfo2" parent="Border/Mon-Field Split/FieldEffects/PanelContainer2" instance=ExtResource("1_n4eof")]
layout_mode = 2

[node name="FieldInfo3" parent="Border/Mon-Field Split/FieldEffects/PanelContainer2" instance=ExtResource("1_n4eof")]
layout_mode = 2

[node name="FieldInfo4" parent="Border/Mon-Field Split/FieldEffects/PanelContainer2" instance=ExtResource("1_n4eof")]
layout_mode = 2

[node name="Buffer3" type="Control" parent="Border/Mon-Field Split/FieldEffects"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer3" type="VBoxContainer" parent="Border/Mon-Field Split/FieldEffects"]
layout_mode = 2

[node name="Info" parent="Border/Mon-Field Split/FieldEffects/PanelContainer3" instance=ExtResource("1_n4eof")]
layout_mode = 2

[node name="Info2" parent="Border/Mon-Field Split/FieldEffects/PanelContainer3" instance=ExtResource("1_n4eof")]
layout_mode = 2
